// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormController Integration: Checkbox child of FormController must display validationMessages on submit attempt 1`] = `
<div>
  <form>
    <label
      class="formField inputElement checkbox error"
    >
      <input
        aria-describedby="checkboxValidationMessage"
        class="htmlInput"
        name="checkbox"
        required=""
        type="checkbox"
      />
      <span
        class="checkboxSvg inputSvg"
      >
        <test-file-stub
          classname="digicon"
          height="18"
          width="18"
        />
      </span>
      a checkbox
    </label>
    <div
      class="wrapper"
      id="checkboxValidationMessage"
    >
      <p
        class="validationMessage"
      >
        Constraints not satisfied
      </p>
    </div>
  </form>
</div>
`;

exports[`FormController Integration: InputText child of FormController must display validationMessages on submit attempt 1`] = `
<div>
  <form>
    <div
      class="formField wrapper error"
    >
      <label
        class="formLabel label"
      >
        <span>
          InputText
        </span>
        <input
          aria-describedby="inputTextValidationMessage"
          name="inputText"
          required=""
          value=""
        />
        <div
          class="wrapper"
          id="inputTextValidationMessage"
        >
          <p
            class="validationMessage"
          >
            Constraints not satisfied
          </p>
        </div>
      </label>
    </div>
  </form>
</div>
`;

exports[`FormController Integration: RadioGroup child of FormController must display validationMessages on submit attempt 1`] = `
<div>
  <form>
    <div
      class="formField"
    >
      <label
        class="radioOption radio inputElement disabled error"
      >
        <input
          aria-describedby="radioGroupValidationMessage"
          class="htmlInput"
          disabled=""
          name="radioGroup"
          type="radio"
          value="test1"
        />
        <span
          class="radioSvg inputSvg"
        >
          <test-file-stub
            classname="digicon"
            height="18"
            width="18"
          />
        </span>
        test 1 Label
      </label>
      <label
        class="radioOption radio inputElement error"
      >
        <input
          aria-describedby="radioGroupValidationMessage"
          class="htmlInput"
          name="radioGroup"
          type="radio"
          value="test2"
        />
        <span
          class="radioSvg inputSvg"
        >
          <test-file-stub
            classname="digicon"
            height="18"
            width="18"
          />
        </span>
        test 2 Label
      </label>
      <div
        class="wrapper"
        id="radioGroupValidationMessage"
      >
        <p
          class="validationMessage"
        >
          Required
        </p>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormController Integration: Select child of FormController must display validationMessages on submit attempt 1`] = `
<div>
  <form>
    <div
      class="formField"
    >
      <label
        class="formLabel label"
      >
        <span>
          Select
        </span>
        <div
          class="wrapper error"
        >
          <select
            aria-describedby="selectValidationMessage"
            class="select"
            id="select"
            name="select"
            required=""
          >
            <option
              value="0"
            >
              Option 1
            </option>
            <option
              value="1"
            >
              Option 2
            </option>
            <option
              value="2"
            >
              Option 3
            </option>
            <option
              value="3"
            >
              Option 4
            </option>
            <option
              value="4"
            >
              Option 5
            </option>
            <option
              value="5"
            >
              Option 6
            </option>
            <option
              value="6"
            >
              Option 7
            </option>
            <option
              value="7"
            >
              Option 8
            </option>
            <option
              value="8"
            >
              Option 9
            </option>
            <option
              value="9"
            >
              Option 10
            </option>
            <option
              value="10"
            >
              Option 11
            </option>
            <option
              value="11"
            >
              Option 12
            </option>
            <option
              value="12"
            >
              Option 13
            </option>
            <option
              value="13"
            >
              Option 14
            </option>
            <option
              value="14"
            >
              Option 15
            </option>
            <option
              value="15"
            >
              Option 16
            </option>
            <option
              value="16"
            >
              Option 17
            </option>
            <option
              value="17"
            >
              Option 18
            </option>
            <option
              value="18"
            >
              Option 19
            </option>
            <option
              value="19"
            >
              Option 20
            </option>
          </select>
          <test-file-stub
            classname="digicon"
            height="16"
            width="16"
          />
        </div>
        <div
          class="wrapper"
          id="selectValidationMessage"
        >
          <p
            class="validationMessage"
          >
            Constraints not satisfied
          </p>
        </div>
      </label>
    </div>
  </form>
</div>
`;

exports[`FormController Integration: TextArea child of FormController must display validationMessages on submit attempt 1`] = `
<div>
  <form>
    <div
      class="formField wrapper error"
    >
      <label
        class="formLabel label"
      >
        <span>
          TextArea
        </span>
        <textarea
          aria-describedby="textAreaValidationMessage"
          name="textArea"
          required=""
        />
        <div
          class="wrapper"
          id="textAreaValidationMessage"
        >
          <p
            class="validationMessage"
          >
            Constraints not satisfied
          </p>
        </div>
      </label>
    </div>
  </form>
</div>
`;
